--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid" src="im1.jpg" width="1366" height="600" alt="Image">
+                    <img class="img-fluid" src="img/im1.jpg" width="1366" height="600" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-primary text-uppercase mb-md-3">Locker  Services</h5>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="img-fluid" src="im2.jpg" height="600" width="1366" alt="Image">
+                    <img class="img-fluid" src="img/im2.jpg" height="600" width="1366" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-primary text-uppercase mb-md-3">Loan Services</h5>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="img-fluid" src="im3.jpg"height="600" width="1366" alt="Image">
+                    <img class="img-fluid" src="img/im3.jpg"height="600" width="1366" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-primary text-uppercase mb-md-3">Easy to Use Mobile App</h5>
@@ -178,7 +178,7 @@
     <div class="container-fluid py-5 mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5" style="background-image: url('im1.jpg');">
+                <div class="col-lg-5" style="background-image: url('img/im1.jpg');">
                     <div class="d-flex flex-column align-items-center justify-content-center  rounded h-100 py-5 px-3">
                         <i class="fa fa-5x fa-award text-primary mb-4"></i>
                         <h1 class="display-2 text-white mb-2" data-toggle="counter-up">31</h1>
@@ -241,28 +241,28 @@
                                 <i class="fa fa-2x fa-hotel"></i>
                             </div>
                             <h5 class="font-weight-bold mb-4 px-4">Home Loan</h5>
-                            <img src="hl.jpg" alt="">
+                            <img src="img/hl.jpg" alt="">
                         </div>
                         <div class="d-flex flex-column align-items-center text-center bg-white rounded overflow-hidden pt-4">
                             <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
                                 <i class="fa fa-2x fa-city"></i>
                             </div>
                             <h5 class="font-weight-bold mb-4 px-4">Business Loan</h5>
-                            <img src="bl.jpg" alt="">
+                            <img src="img/bl.jpg" alt="">
                         </div>
                         <div class="d-flex flex-column align-items-center text-center bg-white rounded overflow-hidden pt-4">
                             <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
                                 <i class="fa fa-2x fa-spa"></i>
                             </div>
                             <h5 class="font-weight-bold mb-4 px-4">Vehicle Loan</h5>
-                            <img src="vl.jpg" alt="">
+                            <img src="img/vl.jpg" alt="">
                         </div>
                         <div class="d-flex flex-column align-items-center text-center bg-white rounded overflow-hidden pt-4">
                             <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
                                 <i class="fa fa-2x fa-city"></i>
                             </div>
                             <h5 class="font-weight-bold mb-4 px-4">Locker</h5>
-                            <img src="l.jpg" alt="">
+                            <img src="img/l.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -297,7 +297,7 @@
                 </div>
                 <div class="col-lg-5" style="min-height: 400px;">
                     <div class="position-relative h-100 rounded overflow-hidden">
-                        <img class="position-absolute w-100 h-100" src="q.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="img/q.jpg" style="object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -325,7 +325,7 @@
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
                             <div class="position-relative">
                                 <div class="team-img">
-                                    <img class="img-fluid w-100" src="r1.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/r1.jpg" alt="">
                                 </div>
                                 <div class="team-social d-flex flex-column align-items-center justify-content-center bg-primary">
                                     <a class="btn btn-secondary btn-social mb-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -341,7 +341,7 @@
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
                             <div class="position-relative">
                                 <div class="team-img">
-                                    <img class="img-fluid w-100" src="r2.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/r2.jpg" alt="">
                                 </div>
                                 <div class="team-social d-flex flex-column align-items-center justify-content-center bg-primary">
                                     <a class="btn btn-secondary btn-social mb-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -357,7 +357,7 @@
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
                             <div class="position-relative">
                                 <div class="team-img">
-                                    <img class="img-fluid w-100" src="r3.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/r3.jpg" alt="">
                                 </div>
                                 <div class="team-social d-flex flex-column align-items-center justify-content-center bg-primary">
                                     <a class="btn btn-secondary btn-social mb-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -373,7 +373,7 @@
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
                             <div class="position-relative">
                                 <div class="team-img">
-                                    <img class="img-fluid w-100" src="r4.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/r4.jpg" alt="">
                                 </div>
                                 <div class="team-social d-flex flex-column align-items-center justify-content-center bg-primary">
                                     <a class="btn btn-secondary btn-social mb-2" href="#"><i class="fab fa-twitter"></i></a>
